# bell24h

./: .aider.chat.history.md  .aider.input.history  .cursorrc  .cursorrules  .deployment-lock  .dockerignore  .env  .env.development  .env.development.backup  .env.example  .env.local  .env.local.backup.1756839874707  .env.local.backup.1756844683945  .env.local.example  .env.neon  .env.neon.example  .env.production.example  .env.production.template  .env.staging  .env.template  .env.test  .env.windsurf  .eslintrc.json  .gitattributes  .github-test.txt  .gitignore  .merge-protection  .pagesignore  .protected-files-checksums.json  .railwayignore  .vercel-env-vars.txt  .vercelignore  .webthinkerrc.json  100_PERCENT_COMPLETE.md  ACHIEVEMENT_SUMMARY.md  ACTUAL_PROJECT_STATUS_REPORT.md  ADD-DNS-A-RECORDS.md  ADMIN-PANEL-COMPREHENSIVE-AUDIT.md  ADMIN_AUDIT_REPORT.md  AI-FEATURES-COMPLETE-STATUS.md  (+1226 more)
.cursor/: Dockerfile  environment.json  mcp.json  settings.json
.github/: copilot-instructions.md
.netlify/: netlify.toml  state.json
.storybook/: preview.tsx
ResearchPlatform/BellMatchInnovation/Bell24hManager/Bell24hMarketplace/: .replit  pyproject.toml
ResearchPlatform/BellMatchInnovation/Bell24hManager/Bell24hMarketplace/backend/: config.py
ResearchPlatform/BellMatchInnovation/Bell24hManager/Bell24hMarketplace/frontend/: rfq_demo.html
ResearchPlatform/BellMatchInnovation/Bell24hManager/Bell24hMarketplace/frontend/components/: ShapExplanation.js
ResearchPlatform/BellMatchInnovation/Bell24hManager/Bell24hMarketplace/frontend/sounds/: convert_to_js_audio.py
lib/: db.js  (+13 more)
(+6127 files in other folders)
