[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bell24h"
version = "0.1.0"
authors = [
  { name = "Bell24h Team" },
]
description = "AI-powered RFQ marketplace"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "uvicorn>=0.24.0",
    "fastapi>=0.103.1",
    "websockets>=11.0.3",
]